crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__runtime-import-in-type-checking-block_TC004_12.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC004_12.py:6:33: TC004 (runtime-import-in-type-checking-block) [*] Move import `collections.abc.Callable` out of type-checking block. Import is used for more than type hinting.
  |
5 | if TYPE_CHECKING:
6 |     from collections.abc import Callable
  |                                 ^^^^^^^^ TC004 (runtime-import-in-type-checking-block)
7 |
8 | AnyCallable: TypeAlias = Callable[..., Any]
  |
  = help: Move out of type-checking block

ℹ Unsafe fix
1 1 | from __future__ import annotations
2 2 | 
3 3 | from typing import Any, TYPE_CHECKING, TypeAlias
  4 |+from collections.abc import Callable
4 5 | 
5 6 | if TYPE_CHECKING:
6   |-    from collections.abc import Callable
  7 |+    pass
7 8 | 
8 9 | AnyCallable: TypeAlias = Callable[..., Any]
