crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__runtime-import-in-type-checking-block_TC004_2.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC004_2.py:4:26: TC004 (runtime-import-in-type-checking-block) [*] Move import `datetime.date` out of type-checking block. Import is used for more than type hinting.
  |
3 | if TYPE_CHECKING:
4 |     from datetime import date
  |                          ^^^^ TC004 (runtime-import-in-type-checking-block)
  |
  = help: Move out of type-checking block

ℹ Unsafe fix
1 1 | from typing import TYPE_CHECKING
  2 |+from datetime import date
2 3 | 
3 4 | if TYPE_CHECKING:
4   |-    from datetime import date
  5 |+    pass
5 6 | 
6 7 | 
7 8 | def example():
