crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__runtime-import-in-type-checking-block_TC004_4.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC004_4.py:4:24: TC004 (runtime-import-in-type-checking-block) [*] Move import `typing.Any` out of type-checking block. Import is used for more than type hinting.
  |
3 | if TYPE_CHECKING:
4 |     from typing import Any
  |                        ^^^ TC004 (runtime-import-in-type-checking-block)
  |
  = help: Move out of type-checking block

ℹ Unsafe fix
1 1 | from typing import TYPE_CHECKING, Type
  2 |+from typing import Any
2 3 | 
3 4 | if TYPE_CHECKING:
4   |-    from typing import Any
  5 |+    pass
5 6 | 
6 7 | 
7 8 | def example(*args: Any, **kwargs: Any):
