crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__runtime-import-in-type-checking-block_TC004_9.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC004_9.py:4:24: TC004 (runtime-import-in-type-checking-block) [*] Move import `typing.Tuple` out of type-checking block. Import is used for more than type hinting.
  |
3 | if TYPE_CHECKING:
4 |     from typing import Tuple, List, Dict
  |                        ^^^^^ TC004 (runtime-import-in-type-checking-block)
5 |
6 | x: Tuple
  |
  = help: Move out of type-checking block

ℹ Unsafe fix
1 1 | from typing import TYPE_CHECKING
  2 |+from typing import Tuple, List
2 3 | 
3 4 | if TYPE_CHECKING:
4   |-    from typing import Tuple, List, Dict
  5 |+    from typing import Dict
5 6 | 
6 7 | x: Tuple
7 8 | 

TC004_9.py:4:31: TC004 (runtime-import-in-type-checking-block) [*] Move import `typing.List` out of type-checking block. Import is used for more than type hinting.
  |
3 | if TYPE_CHECKING:
4 |     from typing import Tuple, List, Dict
  |                               ^^^^ TC004 (runtime-import-in-type-checking-block)
5 |
6 | x: Tuple
  |
  = help: Move out of type-checking block

ℹ Unsafe fix
1 1 | from typing import TYPE_CHECKING
  2 |+from typing import Tuple, List
2 3 | 
3 4 | if TYPE_CHECKING:
4   |-    from typing import Tuple, List, Dict
  5 |+    from typing import Dict
5 6 | 
6 7 | x: Tuple
7 8 |
