crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__runtime-import-in-type-checking-block_quote.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
quote.py:57:28: TC004 (runtime-import-in-type-checking-block) [*] Move import `pandas.DataFrame` out of type-checking block. Import is used for more than type hinting.
   |
56 |     if TYPE_CHECKING:
57 |         from pandas import DataFrame
   |                            ^^^^^^^^^ TC004 (runtime-import-in-type-checking-block)
58 |
59 |     def func(value: DataFrame):
   |
   = help: Move out of type-checking block

ℹ Unsafe fix
   1  |+from pandas import DataFrame
1  2  | def f():
2  3  |     from pandas import DataFrame
3  4  | 
--------------------------------------------------------------------------------
54 55 |     from typing import TYPE_CHECKING
55 56 | 
56 57 |     if TYPE_CHECKING:
57    |-        from pandas import DataFrame
   58 |+        pass
58 59 | 
59 60 |     def func(value: DataFrame):
60 61 |         ...

quote.py:110:28: TC004 (runtime-import-in-type-checking-block) [*] Move import `pandas.DataFrame` out of type-checking block. Import is used for more than type hinting.
    |
109 |     if TYPE_CHECKING:
110 |         from pandas import DataFrame
    |                            ^^^^^^^^^ TC004 (runtime-import-in-type-checking-block)
111 |
112 |     x: TypeAlias = DataFrame | None
    |
    = help: Move out of type-checking block

ℹ Unsafe fix
    1   |+from pandas import DataFrame
1   2   | def f():
2   3   |     from pandas import DataFrame
3   4   | 
--------------------------------------------------------------------------------
107 108 |     from typing import TypeAlias, TYPE_CHECKING
108 109 | 
109 110 |     if TYPE_CHECKING:
110     |-        from pandas import DataFrame
    111 |+        pass
111 112 | 
112 113 |     x: TypeAlias = DataFrame | None
