crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__runtime-import-in-type-checking-block_runtime_evaluated_base_classes_1.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
runtime_evaluated_base_classes_1.py:10:12: TC004 (runtime-import-in-type-checking-block) [*] Move import `datetime` out of type-checking block. Import is used for more than type hinting.
   |
 9 | if TYPE_CHECKING:
10 |     import datetime  # TC004
   |            ^^^^^^^^ TC004 (runtime-import-in-type-checking-block)
11 |     from array import array  # TC004
   |
   = help: Move out of type-checking block

ℹ Unsafe fix
5  5  | 
6  6  | import pydantic
7  7  | from pydantic import BaseModel
   8  |+import datetime
8  9  | 
9  10 | if TYPE_CHECKING:
10    |-    import datetime  # TC004
11 11 |     from array import array  # TC004
12 12 | 
13 13 |     import pandas  # TC004

runtime_evaluated_base_classes_1.py:11:23: TC004 (runtime-import-in-type-checking-block) [*] Move import `array.array` out of type-checking block. Import is used for more than type hinting.
   |
 9 | if TYPE_CHECKING:
10 |     import datetime  # TC004
11 |     from array import array  # TC004
   |                       ^^^^^ TC004 (runtime-import-in-type-checking-block)
12 |
13 |     import pandas  # TC004
   |
   = help: Move out of type-checking block

ℹ Unsafe fix
5  5  | 
6  6  | import pydantic
7  7  | from pydantic import BaseModel
   8  |+from array import array
8  9  | 
9  10 | if TYPE_CHECKING:
10 11 |     import datetime  # TC004
11    |-    from array import array  # TC004
12 12 | 
13 13 |     import pandas  # TC004
14 14 |     import pyproj

runtime_evaluated_base_classes_1.py:13:12: TC004 (runtime-import-in-type-checking-block) [*] Move import `pandas` out of type-checking block. Import is used for more than type hinting.
   |
11 |     from array import array  # TC004
12 |
13 |     import pandas  # TC004
   |            ^^^^^^ TC004 (runtime-import-in-type-checking-block)
14 |     import pyproj
   |
   = help: Move out of type-checking block

ℹ Unsafe fix
5  5  | 
6  6  | import pydantic
7  7  | from pydantic import BaseModel
   8  |+import pandas
8  9  | 
9  10 | if TYPE_CHECKING:
10 11 |     import datetime  # TC004
11 12 |     from array import array  # TC004
12 13 | 
13    |-    import pandas  # TC004
14 14 |     import pyproj
15 15 | 
16 16 |
